sports-nexus-helm/sports-nexus/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sports-nexus-service
spec:
  selector:
    app: sports-nexus
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
